0.225 2023-10-15
  [Requirement Changes]
  
    * Require SPVM 0.990021
  [Incompatibe Changes]
    * IO::Socket::IP#set_blocking method throw an exception if a true value is given.
    
0.224 2023-10-11
  [Bug Fix]
    * Fix a bug that IO::Socket::INET does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::INET6 does not call DESTROY method in IO::Socket.
    * Fix a bug that IO::Socket::UNIX does not call DESTROY method in IO::Socket.
  [Incompatible Changes]
    * The default value of LocalPort option becomes 0.
    * The default value of PeerPort option becomes 0.
  [Document Improvement]
    * Improve docs for IO::Socekt::IP.
  [Test Improvement]
    * Improve IPv6 tests.
0.223 2023-10-11
  [Test Improvement]
    * Improve tests for IO::Socket::UNIX.
  [Internal Changes]
    * IO::Socket::UNIX#option_names becomes protected method.
  [Document Improvement]
    * Add docs for IO::Socket::UNIX.
    * Improve docs for IO::Socket::INET.
    * Improve docs for IO::Socket::INET6.
  [Document Improvement]
    * Add docs for IO::Socket::UNIX.
    * Improve docs for IO::Socket::INET.
    * Improve docs for IO::Socket::INET6.
  
  [Imcompatible Changes]
    * Changes the beheivior of options in IO::Socket::UNIX.
    
      Domain field is always set to AF_UNIX.
      
      Type field is set to SOCK_STREAM if Type option is not specified.
      
      Proto field is always set to 0.
    * Listen default value becomes 0 from -1.
  [Exception Changes]
    * IO::Socket::UNIX#new thrown an exception.
    
      "Peer option must be sepcified if this socket is a clienet socket. Listen option must be a positive number if this socket is a server socket.
      
    * IO::Socket::IP#new thrown an exception.
    
      "PeerAddr option must be sepcified if this socket is a clienet socket. Listen option must be a positive number if this socket is a server socket.
      
0.222 2023-10-10
  [Internal Changes]
    * Remove IO::File#configure method.
  [Bug Fix]